# NativeGamePad

./: .clang-format  CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt
src/MacOS/: CMakeLists.txt  main.m
src/include/: NGP_Event.h  NGP_GamePad.h  NGP_Types.h  NGP_USB_IDS.h
src/lib/: CMakeLists.txt  NGP_GamePad.c  NGP_Internal.h
src/lib/MacOS/: .clang-format  CHLinkedList.h  CHSinglyLinkedList.h  CHSinglyLinkedList.m  CHUtil.h  CHUtil.m  CMakeLists.txt  NGP_GamePad.m  main.c
